#
# setup.cfg
#

[metadata]
name = growler
summary = A microframework using asyncio coroutines and chained middleware
long_description = file:README.rst
author = Andrew Kubera
author_email = andrew.kubera@gmail.com
platforms = all
keywords =
    microframework
    asyncio
    express
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Web Environment
    Operating System :: OS Independent
    # Framework :: Growler
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Topic :: Internet :: WWW/HTTP
    Natural Language :: English

[options]
packages = find:
install_requires =
    asyncio; python_version < "3.4"
setup-requires =
    pytest-runner
tests-require =
    pytest
    pytest-timeout
    pytest-asyncio

[options.extras_require]
mako = growler-mako
jade = pyjade

[options.packages.find]
exclude = tests


[flake8]
ignore = W503
max-line-length = 95
max-complexity = 10
